--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
                     </div>
                     <div class="col-xl-6 col-lg-6 order-0 order-lg-1">
                         <div class="bs-about-thumb wow fadeInRight" data-wow-delay=".3s" data-wow-duration="1s">
-                            <img src="assets/images/about/about-thumb-01.png" alt="image">
+                            <img src="assets/images/banner/banner.jpg" alt="image">
                         </div>
                     </div>
                 </div>
@@ -1579,5 +1579,6 @@
     <script src="assets/js/vendor/dark-light.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
+
 
 </html>
