--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="bs-header-right">
                         <div class="bs-header-btn style-one d-none d-sm-block">
-                            <a class="bs-btn has-color has-icon" href="#">Let's Talk
+                            <a class="bs-btn has-color has-icon" href="#homecontact">Let's Talk
                                 <span class="icon-box">
                            <svg class="icon-first" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
                               <path
@@ -187,7 +187,7 @@
         <!-- banner area start -->
         <section class="bs-banner-area bs-banner-two p-relative">
             <div class="banner-shape-two">
-                <img src="assets/images/shape/double-stabs-shape.svg" alt="image">
+                <img src="assets/images/shape/double-stars-shape.svg" alt="image">
             </div>
             <div class="container">
                 <div class="row align-items-center  g-5">
@@ -1441,70 +1441,6 @@
     <!-- Body main wrapper end -->
 
     <!-- footer area start -->
-    <footer id="homecontact" class="bs-footer-area bs-footer-two primary-bg">
-        <div class="container">
-            <div class="row g-5">
-                <div class="col-xxl-2 col-xl-3 col-lg-3 col-md-4 col-sm-6">
-                    <div class="bs-footer-widget footer-2-col-1">
-                        <div class="bs-footer-widget-logo">
-                            <a class="logo-black" href="index.html"><img src="assets/images/logo/tech2bishal-black.png" alt="logo"></a>
-                            <a class="logo-white" href="index.html"><img src="assets/images/logo/tech2bishal.png" alt="logo"></a>
-                        </div>
-                        <div class="bs-footer-copyright">
-                            <p>© <span id="year"></span> Tech2bishal. <br> Designed by <a href="#">Bishal</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-3">
-                    <div class="bs-footer-widget footer-2-col-2">
-                        <div class="bs-footer-widget-links">
-                            <ul>
-                               <li><a href="#homeabout">About</a></li>
-                                <li> <a href="#homeservices">Services</a></li>
-                                <li> <a href="#homeportfolio">Portfolio</a> </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3 col-sm-3">
-                    <div class="bs-footer-widget footer-2-col-3">
-                        <div class="bs-footer-widget-links">
-                            <ul>
-                                 <li><a href="#homeblog">Blog</a> </li>
-                                <li><a href="#homecontact">Contact</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xxl-3 col-xl-2 col-lg-2 col-md-6 col-sm-6">
-                    <div class="bs-footer-widget footer-2-col-4">
-                        <div class="bs-footer-contact-info">
-                            <div class="bs-footer-contact-item">
-                                <a href="#">Dhaka, Bangladesh. </a>
-                            </div>
-                            <div class="bs-footer-contact-item">
-                                <a href="mailto:zisbishal@gmail.com">zisbishal@gmail.com</a>
-                            </div>
-                            <div class="bs-footer-contact-item">
-                                <a href="tel:+8801722840967"> +8801722840967 </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                    <div class="bs-footer-widget footer-2-col-5">
-                        <div class="bs-footer-social">
-                            <div class="bs-theme-social has-border">
-                                <a href="https://www.facebook.com/zisbishal/"><i class="ri-facebook-fill"></i></a>
-                                <a href="https://github.com/tech2bishal"><i class="ri-github-fill"></i></a>
-                                <a href="https://www.linkedin.com/in/bishal99"><i class="ri-linkedin-line"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
         <footer class="bs-footer-area bs-footer-one primary-bg">
         <div class="container">
             <div class="row justify-content-center">
