--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Tech 2 Bishal | Web Developer</title>
     <meta name="description" content="Portfolio of MD. Zait Ibna Sabit Bishal, a skilled web developer with 3+ years of experience specializing in Front-End, React, Next.js, and WordPress development.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Place favicon.ico in the root directory -->
+
     <link rel="shortcut icon" type="image/x-icon" href="">
     <!-- CSS here -->
     <link rel="stylesheet" href="assets/css/vendor/bootstrap.min.css">
@@ -23,11 +23,11 @@
 
 <body class="bs-smoother-yes">
 
-    <!-- preloader start -->
+
     <div id="pre-load">
         <div id="loader" class="loader">
             <div class="loader-container">
-                <div class="loader-icon"><img src="assets/images/favicon.png" alt=""></div>
+                <div class="loader-icon"><img src="assets/images/logo/tech2bishal-black.png" alt=""></div>
             </div>
         </div>
     </div>
@@ -696,9 +696,10 @@
             <div class="container-fluid">
                 <div class="bs-text-slide-wrapper wow fadeInUp" data-wow-delay=".3s" data-wow-duration="1s">
                     <div class="gsap-marquee right speed-20 move-to-1000 text-gradient-no">
-                        <span class="bs-text-slide-item"> . Selected work . Selected work . Selected work . Selected work .
-                     Selected
-                     work . Selected work . Selected work . Selected work . </span>
+                        <span class="bs-text-slide-item"> . 
+Web Design & Development  . WordPress Development . 
+SEO & Digital Marketing . 
+Back-End Development .</span>
                     </div>
                 </div>
             </div>
@@ -1388,21 +1389,21 @@
                     </div>
                     <div class="col-xl-7 col-lg-7">
                         <div class="bs-contact-form wow fadeInRight" data-wow-delay=".3s" data-wow-duration="1s">
-                            <form id="contact-form" action="assets/mailer.php" method="POST">
+                            <form id="contact-form" action="https://formspree.io/f/xykkdyeq" method="POST">
                                 <div class="row g-5">
                                     <div class="col-md-6">
                                         <div class="bs-contact-input">
-                                            <input id="name" name="name" type="text" placeholder="Full Name">
+                                            <input id="name" name="name" type="text" placeholder="Full Name" required>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="bs-contact-input">
-                                            <input id="email" name="email" type="email" placeholder="Email Address">
+                                            <input id="email" name="email" type="email" placeholder="Email Address" required>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="bs-contact-input">
-                                            <input id="phone" name="phone" type="text" placeholder="Phone Number">
+                                            <input id="phone" name="phone" type="tel" pattern="[0-9]+" placeholder="Phone Number" title="Please enter numbers only"required>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
@@ -1427,6 +1428,7 @@
                                         <div class="bs-contact-btn">
                                             <button type="submit" class="bs-btn has-color">Send Message</button>
                                         </div>
+                                        <div class="ajax-response"></div>
                                     </div>
                                 </div>
                             </form>
